2008-10-24  Tristan Van Berkom  <tvb@gnome.org>

	* gtk/gtkwidget.c: Added a note about GtkWidget:has-tooltip in
	the docs for GtkWidget::query-tooltip.

2008-10-24  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmountoperation.c: The "screen" property ought to have
	type GdkScreen, not GtkWindow. Found by Cosimo Cecchi

2008-10-24  Matthias Clasen  <mclasen@redhat.com>

	Bug 556954 – gtk+/gtk/gtkrecentchooserdefault.c: mismatching
	allocation and deallocation

	* gtk/gtkrecentchooserdefault.c (remove_selected_from_list): Don't
	free a strdup'ed string by g_free. Pointed out by Daniel Marjamäki

2008-10-24  Matthias Clasen  <mclasen@redhat.com>

	Bug 556835 – gtkentry.c: variable is declared at middle of block

	* gtk/gtkentry.c (gtk_entry_copy_clipboard): Fix a C99ism pointed
	out by Kazuki Iwamoto

2008-10-24  Matthias Clasen  <mclasen@redhat.com>

	Bug 557524 – "va_end(args);" should be added into
	gtk_text_buffer_insert_with_tags_by_name( )

	* gtk/gtktextbuffer.c (gtk_text_buffer_insert_with_tags_by_name):
	Don't forget to call va_end. Pointed out by Boram Park

2008-10-23  Alexander Larsson  <alexl@redhat.com>

	Bug 528320 - Incorrect icons displayed for files with custom mimetype icons
	
        * gtk/gtkfilesystem.c:
        (_gtk_file_info_render_icon):
	Fall back on default file icon if there was no icon or it
	was not found in the theme. This goes with the corresponding
	change in glib to not add the fallback icon, but is useful
	in other cases too.

2008-10-22  Behdad Esfahbod  <behdad@gnome.org>

	Bug 555920 – gtkentry.c passes wrong enum to
	pango_layout_set_alignment()

	* gtk/gtkentry.c (gtk_entry_create_layout): Don't set layout
	adjustment.

2008-10-22  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkscreen-x11.c: Only emit size-changed if the screen
	size actually changed.

2008-10-21  Michael Natterer  <mitch@imendio.com>

	* gdk/gdkdraw.c
	* gdk/gdkimage.c
	* gdk/gdkscreen.c
	* gdk/gdkwindow.c: replace assertions for obj != NULL by